# CppTraining

C++ course/Section10/: Excp  Excp.cpp  MultipleCatch  MultipleCatch.cpp  NestedExceptions  NestedExceptions.cpp  StackUnwinding.cpp
C++ course/Section11/: FIleIO  FIleIO.cpp
C++ course/Section12/: Aliases  Basic  Basic.cpp  ClassTmp  PerfectFwd  VariadicTmp  VariadicTmp.cpp
C++ course/Section13/: CaptureLists  FunctionObjects  LambdaBasic  LambdaBasic.cpp
C++ course/Section15/: Algorithms  AssocContainer  (+2 more)
Section-2/: Assignment_1.cpp  ForLoop  ForLoop.cpp  FuncOverloading.cpp  Functions  Functions.cpp  Initialization.cpp  InputOutput  InputOutput.cpp  Namespaces.cpp  Pointers  Pointers.cpp  Reference
Section-3/: Malloc
Section2/: Assignment_1  Assignment_2  Const.cpp  DefaultArguments  DefaultArguments.cpp  InlineFunction  Namespaces  Reference.cpp
Section3/: Malloc.cpp  Memory
Section4/: App2  Car  Car.cpp  Car.h  Integer  Integer.cpp  Integer2.cpp
Section5/: Integer  Integer.cpp  Integer.h  R5  R5.cpp  Source  StdMove.cpp  main.cpp
Section6/: App1  App3  App5  InitvsAss.cpp  Integer  Integer.cpp  Integer.h  SmartPointer  SmartPointer.cpp  TypeConversion  TypeConversion.cpp  TypeConversion2.cpp  TypeConversion3.cpp
Section7/: App1  Deleter  Integer  SharedPtrs  SharedPtrs.cpp  Source2
Section8/: Assignment1  Assignment1.cpp  Assignment2.cpp  DynamicArr.cpp  Enums  Enums.cpp  StringStream  Strings  UsDefLiteral
Section9/: MultipleInheritance.cpp  Source  Source.cpp
Taskuri/Task_10/: CMakeLists.txt  Cerinta  Electric.h  Petroleum.cpp  Vehicle.h
(+340 files in other folders)
